# prosper-challenge

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  SOLUTION.md  bot.py  docker-compose.yaml  pyproject.toml
.github/workflows/: lint.yml  test.yml
prosper/: config.py
prosper/agent/: fillers.py  prompts.py  tools.py
prosper/domain/: __init__.py  exceptions.py  models.py
prosper/ehr/: __init__.py  factory.py  ports.py  service.py
prosper/ehr/adapters/: __init__.py  datetime_helpers.py  fake.py  graphql.py  parsing_helpers.py  playwright.py
tests/: conftest.py
tests/integration/ehr/adapters/: test_graphql_integration.py  test_playwright_integration.py
tests/unit/: conftest.py
tests/unit/agent/: test_fillers.py  test_tools.py
tests/unit/ehr/: test_service.py
tests/unit/ehr/adapters/: test_datetime_helpers.py  test_graphql.py  test_parsing_helpers.py
